some misc fixes and improvements

--- a/view/about.ejs
+++ b/view/about.ejs
@@ -6,10 +6,10 @@
     <div class="text-center">
       <p class="text-lg font-semibold text-green-600">About</p>
       <h1 class="mt-1 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl lg:text-6xl">About GSS Gwarinpa Contact Book</h1>
-      <p class="mx-auto mt-5 max-w-xl text-xl text-gray-500">Project by GSS Gwarinpa class of 2006.</p>
+      <p class="mx-auto my-5 max-w-xl text-xl text-gray-500">Project by GSS Gwarinpa class of 2006.</p>
     </div>
 
-    <div class="relative bg-white p-16">
+    <div class="relative bg-white">
       <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-2 lg:items-start lg:gap-24 lg:px-8">
         <div class="relative sm:py-16 lg:py-0">
           <div aria-hidden="true" class="hidden sm:block lg:absolute lg:inset-y-0 lg:right-0 lg:w-screen">
@@ -70,7 +70,7 @@
 
               <div class="border-t-2 border-gray-100 pt-6">
                 <dt class="text-base font-medium text-gray-500">Number of contacts</dt>
-                <dd class="text-3xl font-bold tracking-tight text-gray-900">200</dd>
+                <dd class="text-3xl font-bold tracking-tight text-gray-900"><%= count %></dd>
               </div>
             </dl>
             <div class="mt-10">
