--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -188,7 +188,7 @@
 
       <section aria-labelledby="timeline-title" class="lg:col-span-1 lg:col-start-3">
         <div class="bg-white px-4 py-5 shadow sm:rounded-lg sm:px-6">
-          <h2 id="timeline-title" class="text-lg font-medium text-gray-900">Timeline</h2>
+          <h2 id="timeline-title" class="text-lg font-medium text-gray-900">Activity Feed</h2>
 
           <!-- Activity Feed -->
           <div class="mt-6 flow-root">
