--- a/view/contacts.ejs
+++ b/view/contacts.ejs
@@ -11,7 +11,7 @@
     <div class="space-y-12">
       <div class="space-y-5 sm:mx-auto sm:max-w-xl sm:space-y-4 lg:max-w-5xl">
         <h1 class="text-3xl font-bold tracking-tight sm:text-4xl">Discover Present & Past GSS Gwarinpa Students</h1>
-        <p class="text-xl text-gray-500">Project by GSS Gwarinpa class of 2006. <a class="text-green-600 hover:underline" href="/register">Add</a> your contact or search for your classmates.</p>
+        <p class="text-xl text-gray-500">Project by GSS Gwarinpa class of 2006. <a class="text-green-600 hover:underline" href="<%= user ? '/contacts/'+user.username : '/register' %>"><%= user ? 'View your profile' : 'Add your contact' %></a> or search for your classmates.</p>
       </div>
       <ul role="list" class="mx-auto space-y-16 sm:grid sm:grid-cols-2 sm:gap-16 sm:space-y-0 lg:max-w-5xl lg:grid-cols-3">
         <% if(profiles.length){ %> <% profiles.forEach(profile => { %> <%- include('includes/profile', {profile: profile}) %> <% }) %> <% } else { %>
