--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -72,30 +72,46 @@
             </div>
             <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
               <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
+                <%= !(profile.nickname && profile.residence && profile.occupation && profile.day && profile.phone) && 'None prodived' %>
+                <!-- NICKNAME -->
+                <% if(profile.nickname){%>
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">Nickname</dt>
                   <dd class="mt-1 text-sm text-gray-900"><%= profile.nickname %></dd>
                 </div>
+                <%}%>
+
+                <!-- RESIDENCE -->
+                <% if(profile.residence){%>
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">Lives in</dt>
                   <dd class="mt-1 text-sm text-gray-900"><%= profile.residence %></dd>
                 </div>
+                <%}%>
+
+                <!-- OCCUPATION -->
+                <% if(profile.occupation){%>
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">Occupation</dt>
                   <dd class="mt-1 text-sm text-gray-900"><%= profile.occupation %></dd>
                 </div>
+                <%}%>
+
+                <!-- BIRTHDAY -->
+                <% if(profile.day){%>
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">Birthday</dt>
                   <dd class="mt-1 text-sm text-gray-900"><%= profile.month %> <%= profile.day %></dd>
                 </div>
-                <div class="sm:col-span-1">
-                  <dt class="text-sm font-medium text-gray-500">Birthday</dt>
-                  <dd class="mt-1 text-sm text-gray-900"><%= profile.month %> <%= profile.day %></dd>
-                </div>
+                <%}%>
+
+                <!-- PHONE -->
+                <% if(profile.phone){%>
                 <div class="sm:col-span-2">
                   <dt class="text-sm font-medium text-gray-500">Phone</dt>
                   <dd class="mt-1 text-sm text-gray-900"><%= profile.phone %></dd>
                 </div>
+                <%}%>
               </dl>
             </div>
           </div>
@@ -229,7 +245,7 @@
                       </span>
                     </div>
                     <div class="flex min-w-0 flex-1 justify-between space-x-4 pt-1.5">
-                      <p><% if(profile.comments){ %> <% if(profile.comments.length > 1){ %> <%= profile.comments.length == 0 ? "" : profile.comments.length + ' comments'%> <% } else { %> <%= profile.comments.length == 0 ? "" : profile.comments.length + ' comment'%> <% } %> <% } else { %> Be the first to say hello! <% } %></p>
+                      <p class="first-line:text-sm text-gray-500"><%= locals.commentsCount %></p>
                     </div>
                   </div>
                 </div>
