--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -72,7 +72,7 @@
             </div>
             <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
               <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
-                <%= !(profile.nickname && profile.residence && profile.occupation && profile.day && profile.phone) && 'None prodived' %>
+                <% if(!(profile.nickname && profile.residence && profile.occupation && profile.day && profile.phone)){%>
                 <!-- NICKNAME -->
                 <% if(profile.nickname){%>
                 <div class="sm:col-span-1">
@@ -111,6 +111,12 @@
                   <dt class="text-sm font-medium text-gray-500">Phone</dt>
                   <dd class="mt-1 text-sm text-gray-900"><%= profile.phone %></dd>
                 </div>
+                <%}%>
+                <!--  -->
+                <%}else{%>
+                <!--  -->
+                None provided
+                <!--  -->
                 <%}%>
               </dl>
             </div>
@@ -214,9 +220,9 @@
                   <span class="absolute top-4 left-4 -ml-px h-full w-0.5 bg-gray-200" aria-hidden="true"></span>
                   <div class="relative flex space-x-3">
                     <div>
-                      <span class="h-8 w-8 rounded-full bg-gray-200 flex items-center justify-center ring-8 ring-white">
+                      <span class="h-8 w-8 svg-container <%= locals.likesHelper.color == 'no' ? ' bg-gray-500' : ' bg-green-500' %> rounded-full flex items-center justify-center ring-8 ring-white">
                         <!-- Heroicon name: mini/hand-thumb-up -->
-                        <svg id="like-button-svg" class="<%= locals.likesHelper.color %>-fill h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <svg id="like-button-svg" class="h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                           <path d="M1 8.25a1.25 1.25 0 112.5 0v7.5a1.25 1.25 0 11-2.5 0v-7.5zM11 3V1.7c0-.268.14-.526.395-.607A2 2 0 0114 3c0 .995-.182 1.948-.514 2.826-.204.54.166 1.174.744 1.174h2.52c1.243 0 2.261 1.01 2.146 2.247a23.864 23.864 0 01-1.341 5.974C17.153 16.323 16.072 17 14.9 17h-3.192a3 3 0 01-1.341-.317l-2.734-1.366A3 3 0 006.292 15H5V8h.963c.685 0 1.258-.483 1.612-1.068a4.011 4.011 0 012.166-1.73c.432-.143.853-.386 1.011-.814.16-.432.248-.9.248-1.388z" />
                         </svg>
                       </span>
@@ -238,8 +244,8 @@
                 <div class="relative pb-8">
                   <div class="relative flex space-x-3">
                     <div>
-                      <span class="h-8 w-8 rounded-full bg-green-500 flex items-center justify-center ring-8 ring-white">
-                        <svg class="h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                      <span class="h-8 w-8 rounded-full <%= locals.commentsCount == 'Be the first to say hello' ? ' bg-gray-500' : ' bg-green-500' %> flex items-center justify-center ring-8 ring-white">
+                        <svg class="h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 20 20" fill="currentColor">
                           <path fill-rule="evenodd" d="M3.43 2.524A41.29 41.29 0 0110 2c2.236 0 4.43.18 6.57.524 1.437.231 2.43 1.49 2.43 2.902v5.148c0 1.413-.993 2.67-2.43 2.902a41.202 41.202 0 01-5.183.501.78.78 0 00-.528.224l-3.579 3.58A.75.75 0 016 17.25v-3.443a41.033 41.033 0 01-2.57-.33C1.993 13.244 1 11.986 1 10.573V5.426c0-1.413.993-2.67 2.43-2.902z" clip-rule="evenodd" />
                         </svg>
                       </span>
@@ -255,10 +261,10 @@
           <% if(user){%>
           <div class="justify-stretch mt-6 flex flex-col">
             <button id="likes-button" data-visitor-name="<%= user.firstName %>" data-visitor-email="<%= user.email %>" data-contact-email="<%= profile.email %>" class="<%= locals.likesHelper.color%>-toggle inline-flex items-center justify-center rounded-md border border-transparent bg-blue-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
-              <svg id="like-button-svg" class="<%= locals.likesHelper.color%>-fill" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+              <svg id="like-button-svg" class="pointer-events-none <%= locals.likesHelper.color%>-fill" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"></path>
               </svg>
-              <p id="like-word" class="ml-1 <%= locals.likesHelper.color%>-like-color"><%= locals.likesHelper.text %></p>
+              <p id="like-word" class="pointer-events-none ml-1"><%= locals.likesHelper.text %></p>
             </button>
           </div>
           <%}%>
