--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -72,7 +72,6 @@
             </div>
             <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
               <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
-                <% if(!(profile.nickname && profile.residence && profile.occupation && profile.day && profile.phone)){%>
                 <!-- NICKNAME -->
                 <% if(profile.nickname){%>
                 <div class="sm:col-span-1">
@@ -112,12 +111,6 @@
                   <dd class="mt-1 text-sm text-gray-900"><%= profile.phone %></dd>
                 </div>
                 <%}%>
-                <!--  -->
-                <%}else{%>
-                <!--  -->
-                None provided
-                <!--  -->
-                <%}%>
               </dl>
             </div>
           </div>
@@ -152,7 +145,7 @@
                           <% } %>
                         </div>
                         <div class="mt-1 text-sm text-gray-700">
-                          <p class="comment"><%- filterUserHTML(comment.comment)%></p>
+                          <p class="comment break-words"><%- filterUserHTML(comment.comment)%></p>
                         </div>
                         <div class="mt-2 space-x-2 text-sm">
                           <datetime datetime="<%= comment.commentDate %>" class="comment-date-time font-medium text-gray-500"> <%= comment.commentDate %> </datetime>
