break words all

--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -145,7 +145,7 @@
                           <% } %>
                         </div>
                         <div class="mt-1 text-sm text-gray-700">
-                          <p class="comment break-words"><%- filterUserHTML(comment.comment)%></p>
+                          <p class="comment break-all"><%- filterUserHTML(comment.comment)%></p>
                         </div>
                         <div class="mt-2 space-x-2 text-sm">
                           <datetime datetime="<%= comment.commentDate %>" class="comment-date-time font-medium text-gray-500"> <%= comment.commentDate %> </datetime>
