dep warning changes

--- a/view/homePage.ejs
+++ b/view/homePage.ejs
@@ -9,7 +9,7 @@
       <%- include('includes/flash') %>
       <!-- ERROR FLASH MESSAGE END-->
       <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
-        <p class="text-lg font-semibold text-green-600">Home</p>
+        <p class="text-lg font-semibold text-green-600">Welcome</p>
         <span class="block xl:inline">Discover Present & Past</span>
         <span class="block text-green-600 xl:inline">GSS Gwarinpa Students</span>
       </h1>
