--- a/view/registrationPage.ejs
+++ b/view/registrationPage.ejs
@@ -14,7 +14,7 @@
       <div class="mt-8">
         <div>
           <div>
-            <p class="text-sm font-medium text-gray-700">Sign in with</p>
+            <p class="text-sm font-medium text-gray-700">Sign up with</p>
 
             <div class="mt-1 grid grid-cols-1 gap-3">
               <div>
