--- a/view/homePage.ejs
+++ b/view/homePage.ejs
@@ -36,7 +36,15 @@
         <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">Recently added contacts</h2>
       </div>
       <ul role="list" class="mx-auto space-y-16 sm:grid sm:grid-cols-3 sm:gap-16 sm:space-y-0 lg:grid-cols-4 lg:max-w-7xl lg:mx-auto">
-        <% if(contacts.length){ %> <% contacts.forEach(contact => { %> <%- include('includes/profile', {profile: contact}) %> <% }) %> <% } else { %>
+        <% if(contacts.length){ %>
+        <!--  -->
+        <% contacts.forEach(contact => { %>
+        <!--  -->
+        <%- include('includes/profile', {profile: contact}) %>
+        <!--  -->
+        <% }) %>
+        <!--  -->
+        <% } else { %>
         <p>No profile found.</p>
         <%}%>
       </ul>
