--- a/view/includes/profile.ejs
+++ b/view/includes/profile.ejs
@@ -1,15 +1,13 @@
 <li>
-  <a href="/contacts/<%= profile.username %>" class="space-y-6">
+  <a href="/contacts/<%= profile.username %>" class="space-y-6 overflow-hidden rounded-full block">
     <% if(profile.google_id) {%>
-    <img class="object-contain mx-auto rounded-full h-56 w-56 bg-gray-900" src="<%= profile.photo %>" alt="<%= profile.firstName %> <%= profile.lastName %>" />
+    <img class="object-contain mx-auto rounded-full h-56 w-56 bg-gray-900" src="<%= profile.photo %>" alt="<%= profile.firstName %>" />
     <% } else {%>
-    <object data="<%='/images/'+profile.email.split('@')[0] %>" alt="profile picture">
-      <img class="object-contain mx-auto rounded-full h-56 w-56 bg-gray-900" src="../../static/blank.png" alt="<%= profile.firstName %> <%= profile.lastName %>" />
-    </object>
+    <img class="object-contain mx-auto rounded-full h-56 w-56 bg-gray-900 text-white" src="<%='/images/'+profile.email.split('@')[0]%>" alt="<%= profile.firstName %>" />
     <% } %>
     <div class="space-y-2">
       <div class="space-y-1 text-lg font-medium leading-6">
-        <h3><%= profile.firstName %> <%= profile.lastName %></h3>
+        <h3><%= profile.firstName %></h3>
         <p class="text-green-600"><%= profile.year %></p>
       </div>
     </div>
