--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full">
   <head>
-    <% var metatags = metatags ? metatags : { title: 'GSS Gwarinpa Contact Book 📗', description: 'Find Your GSS Gwarinpa Classmates and Their Contacts.', image: { url: 'https://gss-gwarinpa.s3.us-east-2.amazonaws.com/1580629627915', alt: 'Page image'},path: '/', } %>
+    <% var metatags = metatags ? metatags : { title: 'GSS Gwarinpa Contact Book 📗', description: 'Find Your GSS Gwarinpa Classmates and Their Contacts.', image: { url: 'https://gss-gwarinpa.s3.us-east-2.amazonaws.com/1580629627915', alt: 'Page image'},path: '', } %>
     <meta charset="UTF-8" />
     <title><%= metatags.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
