More seo changes

--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -86,7 +86,7 @@
               </label>
             </form>
             <% } else { %>
-            <a href="/login" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">Sign in</a>
+            <a href="/login" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">Login</a>
             <a href="/register" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border  bg-green-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-green-700">Add Your Contact</a>
             <% } %>
           </div>
