further misc UI changes

--- a/view/includes/profile.ejs
+++ b/view/includes/profile.ejs
@@ -12,7 +12,7 @@
       </div>
     </div>
   </a>
-  <ul role="list" class="flex justify-center space-x-5 mt-1">
+  <ul class="flex justify-center space-x-5 mt-1">
     <% if(profile.phone) {%>
     <li>
       <a href="tel:<%=profile.phone%>" class="text-gray-400 hover:text-gray-500">
