lazy load images

--- a/view/about.ejs
+++ b/view/about.ejs
@@ -26,7 +26,7 @@
           <div class="relative mx-auto max-w-md px-4 sm:max-w-3xl sm:px-6 lg:max-w-none lg:px-0 lg:py-20">
             <!-- Testimonial card-->
             <div class="relative overflow-hidden rounded-2xl pt-64 pb-10 shadow-xl">
-              <img class="absolute inset-0 h-full w-full object-cover" src="/static/gss-gwarinpa-logo.webp" alt="GSS Gwarinpa logo" loading="lazy" />
+              <img loading="lazy" class="absolute inset-0 h-full w-full object-cover" src="/static/gss-gwarinpa-logo.webp" alt="GSS Gwarinpa logo" loading="lazy" />
               <div class="absolute inset-0 bg-green-500 mix-blend-multiply"></div>
               <div class="absolute inset-0 bg-gradient-to-t from-green-600 via-green-600 opacity-90"></div>
               <div class="relative px-8">
