--- a/view/includes/sort.ejs
+++ b/view/includes/sort.ejs
@@ -1,6 +1,6 @@
 <section id="filter-section" class="flex justify-center relative">
   <div class="label-onlick-bg-color flex items-center text-md cursor-pointer mr-4" id="filter-icon-container">
-    <img src="../../static/filter.svg" alt="filter-icon" />
+    <img loading="lazy" src="../../static/filter.svg" alt="filter-icon" />
     <label class="label-onlick-bg-color ml-1 cursor-pointer">Filter</label>
   </div>
 
