--- a/view/404.ejs
+++ b/view/404.ejs
@@ -28,7 +28,7 @@
     </footer>
   </div>
   <div class="hidden lg:absolute lg:inset-y-0 lg:right-0 lg:block lg:w-1/2">
-    <img class="absolute inset-0 h-full w-full object-cover" src="https://images.unsplash.com/photo-1470847355775-e0e3c35a9a2c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1825&q=80" alt="" />
+    <img loading="lazy" class="absolute inset-0 h-full w-full object-cover" src="https://images.unsplash.com/photo-1470847355775-e0e3c35a9a2c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1825&q=80" alt="" />
   </div>
 </div>
 
