--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -10,9 +10,9 @@
           <div class="relative overflow-hidden rounded-full block">
             <!--  -->
             <% if(profile.google_id){ %>
-            <img src="<%= profile.google_photo %>" class="h-16 w-16 rounded-full from-green-300 via-green-700 to-green-300 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+            <img loading="lazy" src="<%= profile.google_photo %>" class="h-16 w-16 rounded-full from-green-300 via-green-700 to-green-300 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
             <% } else { %>
-            <img src="<%=locals.images_folder+profile._id%>" class="h-16 w-16 rounded-full from-green-300 via-green-700 to-green-300 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+            <img loading="lazy" src="<%=locals.images_folder+profile._id%>" class="h-16 w-16 rounded-full from-green-300 via-green-700 to-green-300 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
             <%}%>
 
             <span class="absolute inset-0 rounded-full shadow-inner" aria-hidden="true"></span>
@@ -133,9 +133,9 @@
                     <div class="flex space-x-3">
                       <p class="flex-shrink-0">
                         <% if(comment.google_id){ %>
-                        <img src="<%= comment.photo %>" class="overflow-hidden bg-gradient-to-r from-green-300 via-green-700 to-green-300 w-8 h-8 rounded-full" alt="<%= comment.visitorFirstName.substring(0,1) %>" />
+                        <img loading="lazy" src="<%= comment.photo %>" class="overflow-hidden bg-gradient-to-r from-green-300 via-green-700 to-green-300 w-8 h-8 rounded-full" alt="<%= comment.visitorFirstName.substring(0,1) %>" />
                         <% } else { %>
-                        <img src="<%=locals.images_folder+comment.userId%>" class="overflow-hidden bg-gradient-to-r from-green-300 via-green-700 to-green-300 w-8 h-8 rounded-full" alt="<%= comment.visitorFirstName.substring(0,1) %>" />
+                        <img loading="lazy" src="<%=locals.images_folder+comment.userId%>" class="overflow-hidden bg-gradient-to-r from-green-300 via-green-700 to-green-300 w-8 h-8 rounded-full" alt="<%= comment.visitorFirstName.substring(0,1) %>" />
                         <%}%>
                       </p>
 
@@ -182,12 +182,12 @@
             <% if(user){ %>
             <div class="bg-gray-50 px-4 py-6 sm:px-6">
               <div class="flex space-x-3">
-                <div class="flex-shrink-0 ">
+                <div class="flex-shrink-0">
                   <!--  -->
                   <% if(profile.google_id){ %>
-                  <img src="<%= profile.google_photo %>" class="overflow-hidden bg-gradient-to-r from-green-300 via-green-700 to-green-300 h-10 w-10 rounded-full" alt="<%= profile.firstName.substring(0,1) %>" />
+                  <img loading="lazy" src="<%= profile.google_photo %>" class="overflow-hidden bg-gradient-to-r from-green-300 via-green-700 to-green-300 h-10 w-10 rounded-full" alt="<%= profile.firstName.substring(0,1) %>" />
                   <% } else { %>
-                  <img src="<%=locals.images_folder+user._id%>" class=" overflow-hidden bg-gradient-to-r from-green-300 via-green-700 to-green-300 h-10 w-10 rounded-full" alt="<%= profile.firstName.substring(0,1) %>" />
+                  <img loading="lazy" src="<%=locals.images_folder+user._id%>" class="overflow-hidden bg-gradient-to-r from-green-300 via-green-700 to-green-300 h-10 w-10 rounded-full" alt="<%= profile.firstName.substring(0,1) %>" />
                   <%}%>
                 </div>
 
