--- a/view/homePage.ejs
+++ b/view/homePage.ejs
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="relative h-64 w-full sm:h-72 md:h-96 lg:absolute lg:inset-y-0 lg:right-0 lg:h-full lg:w-1/2">
-    <img class="absolute inset-0 h-full w-full object-cover" src="static/gg.jpeg" alt="" />
+    <img loading="lazy" class="absolute inset-0 h-full w-full object-cover" src="static/gg.jpeg" alt="" />
   </div>
 </section>
 <section class="py-12 bg-gradient-to-r from-gray-200 via-green-100 to-gray-200">
