--- a/view/includes/footer.ejs
+++ b/view/includes/footer.ejs
@@ -1,6 +1,7 @@
 
 <!-- FOOTER -->
 <footer class="text-center text-xs sm:text-lg">
+  <input id="gssg-environment" type="hidden" value="<%= locals.environment %>" >
 
   <hr class="border-t border-black mb-4" />
     <!-- IF HOMEPAGE SHOW SCROLL-TO-TOP -->
