--- a/view/includes/loggedInUser.ejs
+++ b/view/includes/loggedInUser.ejs
@@ -21,7 +21,7 @@
   </span>
 
   <span class="ml-3 hidden sm:block">
-    <a href="/account/<%= user.username %>" class="inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 focus:ring-offset-gray-50">
+    <a href="/settings/<%= user.username %>" class="inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 focus:ring-offset-gray-50">
       <!-- Heroicon name: mini/cog -->
 
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="-ml-1 mr-2 h-5 w-5 text-gray-400">
