--- a/view/settings/change-profile-photo.ejs
+++ b/view/settings/change-profile-photo.ejs
@@ -6,8 +6,9 @@
       <div class="divide-y divide-gray-200 lg:grid lg:grid-cols-12 lg:divide-y-0 lg:divide-x">
         <%- include('../includes/settingsNav') %>
 
-        <form class="divide-y divide-gray-200 lg:col-span-9" action="#" method="POST">
-          <!-- Profile section -->
+        <form class="divide-y divide-gray-200 lg:col-span-9" action="#" method="POST" enctype="multipart/form-data">
+          <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
+
           <div class="py-6 px-4 sm:p-6 lg:pb-8">
             <div>
               <h2 class="text-lg font-medium leading-6 text-gray-900">Profile photo</h2>
@@ -44,10 +45,8 @@
                 </div>
               </div>
             </div>
-
           </div>
 
-          <!-- Privacy section -->
           <div class="divide-y divide-gray-200 pt-6">
             <div class="mt-4 flex justify-end py-4 px-4 sm:px-6">
               <button type="button" class="inline-flex justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-sky-500 focus:ring-offset-2">Cancel</button>
