--- a/view/settings/edit-profile.ejs
+++ b/view/settings/edit-profile.ejs
@@ -1,5 +1,10 @@
 <%- include('../includes/header') %>
-<main class="relative mt-10">
+<header class="relative py-10">
+  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+    <h1 class="text-3xl font-bold tracking-tight">Settings</h1>
+  </div>
+</header>
+<main class="relative">
   <div class="mx-auto max-w-screen-xl px-4 pb-6 sm:px-6 lg:px-8 lg:pb-16">
     <div class="overflow-hidden rounded-lg bg-white shadow">
       <div class="divide-y divide-gray-200 lg:grid lg:grid-cols-12 lg:divide-y-0 lg:divide-x">
