--- a/view/includes/flash.ejs
+++ b/view/includes/flash.ejs
@@ -1,24 +1,14 @@
 <!-- ERROR FLASH -->
 <% errors.forEach(function(message){ %>
-<div
-  class="bg-red-100 border border-red-400 text-red-700 text-center px-4 py-3 flex justify-center items-center rounded"
->
+<div class="bg-red-100 border border-red-400 text-red-700 text-center px-4 py-3 flex justify-center items-center rounded">
   <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-8 h-8">
-    <path
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      stroke-width="2"
-      d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-    ></path>
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
   </svg>
   <p class="ml-3"><%= message %></p>
 </div>
+<% }) %>
 
 <!-- SUCCESS FLASH -->
-<% }) %> <% success.forEach(function(message){ %>
-<div
-  class="bg-green-100 border border-green-400 text-green-700 text-center px-4 py-3 rounded"
->
-  <%= message %>
-</div>
+<% success.forEach(function(message){ %>
+<div class="bg-green-100 border border-green-400 text-green-700 text-center px-4 py-3 rounded"><%= message %></div>
 <% }) %>
