--- a/view/settings/change-password.ejs
+++ b/view/settings/change-password.ejs
@@ -10,7 +10,7 @@
       <div class="divide-y divide-gray-200 lg:grid lg:grid-cols-12 lg:divide-y-0 lg:divide-x">
         <%- include('../includes/settingsNav') %>
 
-        <form class="divide-y divide-gray-200 lg:col-span-9" action="/settings/<%= username %>/edit" method="POST">
+        <form class="divide-y divide-gray-200 lg:col-span-9" action="/settings/<%= username %>/change-password" method="POST">
           <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
 
           <div class="py-6 px-4 sm:p-6 lg:pb-8">
@@ -20,14 +20,14 @@
             </div>
             <%- include('../includes/flash') %>
             <div class="mt-6 grid grid-cols-12 gap-6">
-              <div class="col-span-12 sm:col-span-6">
+              <div class="col-span-12">
                 <label for="current_password" class="block text-sm font-medium text-gray-700">Current Password <span class="text-red-600">*</span></label>
                 <input type="password" name="old_password" value="" id="current_password" autocomplete="current-password" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12 sm:col-span-6">
                 <label for="new_password" class="block text-sm font-medium text-gray-700">New Password <span class="text-red-600">*</span></label>
-                <input type="password" name="old_password" value="" id="new_password" autocomplete="new-password" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="password" name="new_password" value="" id="new_password" autocomplete="new-password" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12 sm:col-span-6">
@@ -39,7 +39,7 @@
          
           <div class="divide-y divide-gray-200 pt-6">
             <div class="mt-4 flex justify-end py-4 px-4 sm:px-6">
-              <a href="/contacts/<%=  %>" class="inline-flex justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-sky-500 focus:ring-offset-2">Cancel</a>
+              <a href="/contacts/<%= user.username %>" class="inline-flex justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-sky-500 focus:ring-offset-2">Cancel</a>
               <button type="submit" class="ml-5 inline-flex justify-center rounded-md border border-transparent bg-sky-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-sky-800 focus:outline-none focus:ring-2 focus:ring-sky-500 focus:ring-offset-2">Save</button>
             </div>
           </div>
