--- a/view/settings/edit-profile.ejs
+++ b/view/settings/edit-profile.ejs
@@ -10,7 +10,7 @@
       <div class="divide-y divide-gray-200 lg:grid lg:grid-cols-12 lg:divide-y-0 lg:divide-x">
         <%- include('../includes/settingsNav') %>
 
-        <form class="divide-y divide-gray-200 lg:col-span-9" action="/settings/<%= profile.username %>/edit" method="POST">
+        <form class="divide-y divide-gray-200 lg:col-span-9" action="/settings/<%= profile.username %>/edit-profile" method="POST">
           <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
 
           <div class="py-6 px-4 sm:p-6 lg:pb-8">
@@ -54,7 +54,7 @@
 
               <div class="col-span-12 sm:col-span-6">
                 <label for="phone" class="block text-sm font-medium text-gray-700"> What is your phone number?</label>
-                <input type="text" name="phone" value="<%= profile.phone %>" id="phone" autocomplete="mobile" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="text" name="phone" value="<%= profile.phone %>" id="phone" autocomplete="tel" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12 sm:col-span-6">
