--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -111,6 +111,22 @@
                   <dd class="mt-1 text-sm text-gray-900"><%= profile.phone %></dd>
                 </div>
                 <%}%>
+
+                <!-- SOCIAL MEDIA #1 -->
+                <% if(profile.social_type_1){%>
+                <div class="sm:col-span-2">
+                  <dt class="text-sm font-medium text-gray-500"><%= profile.social_type_1 %></dt>
+                  <dd class="mt-1 text-sm text-gray-900"><a href="<%= profile.link_social_type_1 %>">Check out my <%= profile.social_type_1 %></a></dd>
+                </div>
+                <%}%>
+
+                 <!-- SOCIAL MEDIA #2 -->
+                <% if(profile.social_type_1){%>
+                <div class="sm:col-span-2">
+                  <dt class="text-sm font-medium text-gray-500"><%= profile.social_type_2 %></dt>
+                  <dd class="mt-1 text-sm text-gray-900"><a href="<%= profile.link_social_type_2 %>">Check out my <%= profile.social_type_2 %></a></dd>
+                </div>
+                <%}%>
               </dl>
             </div>
           </div>
