--- a/view/settings/edit-profile.ejs
+++ b/view/settings/edit-profile.ejs
@@ -43,6 +43,11 @@
               </div>
 
               <div class="col-span-12">
+                <label for="email" class="block text-sm font-medium text-gray-700">Email <span class="text-red-600">*</span></label>
+                <input readonly type="text" name="email" value="<%= profile.email %>" id="email" autocomplete="email" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
+              </div>
+
+              <div class="col-span-12">
                 <label for="year" class="block text-sm font-medium text-gray-700"> What year did you graduated OR will graduate GSS Gwarinpa? <span class="text-red-600">*</span></label>
                 <input type="text" name="year" value="<%= profile.year %>" id="year" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
