--- a/view/settings/change-profile-photo.ejs
+++ b/view/settings/change-profile-photo.ejs
@@ -29,11 +29,11 @@
                     </div>
                     <div class="ml-5 rounded-md shadow-sm">
                       <div class="group relative flex items-center justify-center rounded-md border border-gray-300 py-2 px-3 focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:bg-gray-50">
-                        <label for="mobile-user-photo" class="pointer-events-none relative text-sm font-medium leading-4 text-gray-700">
+                        <label for="profile-photo-mobile" class="pointer-events-none relative text-sm font-medium leading-4 text-gray-700">
                           <span>Change</span>
                           <span class="sr-only"> user photo</span>
                         </label>
-                        <input id="mobile-user-photo" name="user-photo" type="file" class="absolute h-full w-full cursor-pointer rounded-md border-gray-300 opacity-0" />
+                        <input id="profile-photo-mobile" name="photo" type="file" class="absolute h-full w-full cursor-pointer rounded-md border-gray-300 opacity-0" />
                       </div>
                     </div>
                   </div>
@@ -44,7 +44,7 @@
                   <label for="desktop-user-photo" class="absolute inset-0 flex h-full w-full items-center justify-center bg-black bg-opacity-75 text-sm font-medium text-white opacity-0 focus-within:opacity-100 hover:opacity-100">
                     <span>Change</span>
                     <span class="sr-only"> user photo</span>
-                    <input type="file" id="desktop-user-photo" name="user-photo" class="absolute inset-0 h-full w-full cursor-pointer rounded-md border-gray-300 opacity-0" />
+                    <input type="file" id="desktop-user-photo" name="photo" class="absolute inset-0 h-full w-full cursor-pointer rounded-md border-gray-300 opacity-0" />
                   </label>
                 </div>
               </div>
@@ -53,7 +53,7 @@
 
           <div class="divide-y divide-gray-200 pt-6">
             <div class="mt-4 flex justify-end py-4 px-4 sm:px-6">
-              <a href="/contacts/<%= profile.username %>" class="inline-flex justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Cancel</a>
+              <a href="/contacts/<%= user.username %>" class="inline-flex justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Cancel</a>
               <button type="submit" class="ml-5 inline-flex justify-center rounded-md border border-transparent bg-indigo-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-800 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Save</button>
             </div>
           </div>
