--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -10,7 +10,7 @@
             <% if(profile.google_id){ %>
             <img loading="lazy" src="<%= profile.google_photo %>" class="h-16 w-16 rounded-full from-indigo-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
             <% } else { %>
-            <img loading="lazy" src="<%=locals.images_folder+profile._id%>" class="h-16 w-16 rounded-full from-indigo-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+            <img loading="lazy" src="<%=profile.photo %>" class="h-16 w-16 rounded-full from-indigo-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
             <%}%>
 
             <span class="absolute inset-0 rounded-full shadow-inner" aria-hidden="true"></span>
